tests/baselines/reference/iteratorSpreadInArray6.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts(15,14): error TS2345: Argument of type '[symbol[]]' is not assignable to parameter of type 'ConcatArray<number>[] | (number | ConcatArray<number>)[]'.
  Type '[symbol[]]' is not assignable to type '(number | ConcatArray<number>)[]'.
    Type 'symbol[]' is not assignable to type 'number | ConcatArray<number>'.
      Type 'symbol[]' is not assignable to type 'ConcatArray<number>'.
        The types returned by 'slice(...)' are incompatible between these types.
          Type 'symbol[]' is not assignable to type 'number[]'.
            Type 'symbol' is not assignable to type 'number'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: number[] = [0, 1];
    array.concat([...new SymbolIterator]);
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[symbol[]]' is not assignable to parameter of type 'ConcatArray<number>[] | (number | ConcatArray<number>)[]'.
!!! error TS2345:   Type '[symbol[]]' is not assignable to type '(number | ConcatArray<number>)[]'.
!!! error TS2345:     Type 'symbol[]' is not assignable to type 'number | ConcatArray<number>'.
!!! error TS2345:       Type 'symbol[]' is not assignable to type 'ConcatArray<number>'.
!!! error TS2345:         The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:           Type 'symbol[]' is not assignable to type 'number[]'.
!!! error TS2345:             Type 'symbol' is not assignable to type 'number'.